fix main alignment

--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -48,7 +48,7 @@ body {
 
 .heading {
   font-size: 3rem;
-  margin: 110px 0 30px 0;
+  margin: 90px 0 30px 0;
 }
 
 #container {
@@ -63,7 +63,7 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
+  justify-content: center;
   align-items: center;
   flex: 1;
   width: 100%;
